--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tarefas</title>
     <link rel="manifest" href="manifest.json">
+    <script src="script.js">def</script>
 </head>
 <body>
     <h1>Lista de tarefas</h1>
